rename img home

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		</nav>
 
 		<section class="container mt-5">
-			<img src="./assets/img/muque.webp" alt="Taylor Swift" class="img-fluid" />
+			<img src="./assets/img/home.png" alt="Taylor Swift" class="img-fluid" />
 			<p>
 				Taylor Alison Swift é uma cantora, compositora, atriz, diretora e
 				roteirista norte-americana. Suas composições narrativas, muitas vezes
