add favicon and improve home

--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="assets/favicon/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="assets/favicon/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="assets/favicon/favicon-16x16.png"
+		/>
+
+		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
@@ -17,12 +35,12 @@
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
 		/>
 
-		<title>Taylor Swift</title>
+		<title>Taylor Swift em Peso!</title>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg bg-body-tertiary">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#">Taylor Swift</a>
+				<a class="navbar-brand" href="#">Taylor Swift em Peso!</a>
 				<button
 					class="navbar-toggler"
 					type="button"
@@ -61,15 +79,55 @@
 			</div>
 		</nav>
 
-		<section class="container mt-5">
-			<img src="./assets/img/home.png" alt="Taylor Swift" class="img-fluid" />
-			<p>
-				Taylor Alison Swift é uma cantora, compositora, atriz, diretora e
-				roteirista norte-americana. Suas composições narrativas, muitas vezes
-				inspirada pelas suas experiências pessoais, tem recebido ampla cobertura
-				mediática e elogios críticos.
-			</p>
-		</section>
+		<main class="container mt-5">
+			<section class="mt-5">
+				<h1 class="mb-3">Bem-vindo ao Blog Taylor Swift em Peso!</h1>
+				<p>
+					Nossa missão aqui é mergulhar profundamente no mundo de Taylor Swift e
+					fornecer a você informações atualizadas sobre sua carreira musical em
+					constante evolução, seus videoclipes emocionantes, seus projetos
+					inspiradores e muito mais. Queremos criar uma comunidade de fãs
+					dedicados que possam compartilhar sua paixão pela Taylor e discutir
+					todas as coisas relacionadas a ela.
+					<br />
+					Este blog é um espaço dedicado a todos os Swifties que compartilham a
+					paixão por Taylor Swift. Sinta-se à vontade para interagir, comentar,
+					compartilhar e fazer parte desta jornada emocionante.
+				</p>
+				<img src="./assets/img/home.png" alt="Taylor Swift" class="img-fluid" />
+			</section>
+			<section class="container-fluid mt-5 pb-5">
+				<div class="row">
+					<div class="col-md-6 col-12">
+						Não se esqueça de se inscrever para receber nossas atualizações por
+						e-mail e nos seguir nas redes sociais para ficar sempre atualizado.
+						Junte-se a nós enquanto exploramos o incrível universo da música, do
+						talento e da inspiração que é Taylor Swift. Vamos começar essa
+						jornada juntos!
+					</div>
+					<div class="col-md-6 col-12">
+						<form class="mb-3">
+							<div class="form-floating mb-3">
+								<input
+									placeholder="Ex.: taylor@swift.com"
+									id="email"
+									type="email"
+									class="form-control"
+								/>
+								<label for="email">E-mail:</label>
+							</div>
+							<button class="btn btn-primary w-100">Inscrever-se</button>
+						</form>
+						<div class="d-flex" style="font-size: 30px">
+							<i class="text-secondary-emphasis bi bi-instagram"></i>
+							<i class="text-secondary-emphasis bi bi-facebook ms-2"></i>
+							<i class="text-secondary-emphasis bi bi-snapchat ms-2"></i>
+							<i class="text-secondary-emphasis bi bi-twitter ms-2"></i>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
 
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
