adicionar bases/sugestoes e ajustes

--- a/index.html
+++ b/index.html
@@ -55,13 +55,10 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link" href="#">Biografia</a>
+							<a class="nav-link" href="biografia.html">Biografia</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Discografia</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Prêmios</a>
+							<a class="nav-link" href="discografia.html">Discografia</a>
 						</li>
 					</ul>
 					<form class="d-flex" role="search">
@@ -94,6 +91,7 @@
 					paixão por Taylor Swift. Sinta-se à vontade para interagir, comentar,
 					compartilhar e fazer parte desta jornada emocionante.
 				</p>
+				<!-- AQUI NESSA IMAGEM DA PRA FAZER UM CARROSEL -->
 				<img src="./assets/img/home.png" alt="Taylor Swift" class="img-fluid" />
 			</section>
 			<section class="container-fluid mt-5 pb-5">
@@ -104,9 +102,25 @@
 						Junte-se a nós enquanto exploramos o incrível universo da música, do
 						talento e da inspiração que é Taylor Swift. Vamos começar essa
 						jornada juntos!
+						<div class="d-flex mt-4" style="font-size: 30px">
+							<i class="text-secondary-emphasis bi bi-instagram"></i>
+							<i class="text-secondary-emphasis bi bi-facebook ms-2"></i>
+							<i class="text-secondary-emphasis bi bi-snapchat ms-2"></i>
+							<i class="text-secondary-emphasis bi bi-twitter ms-2"></i>
+						</div>
 					</div>
 					<div class="col-md-6 col-12">
+						<!-- AQUI DA PRA ADICIONAR VALIDACAO NESSE FORM -->
 						<form class="mb-3">
+							<div class="form-floating mb-3">
+								<input
+									placeholder="Ex.: Taylor Swift"
+									id="nome"
+									type="text"
+									class="form-control"
+								/>
+								<label for="nome">Nome:</label>
+							</div>
 							<div class="form-floating mb-3">
 								<input
 									placeholder="Ex.: taylor@swift.com"
@@ -118,12 +132,6 @@
 							</div>
 							<button class="btn btn-primary w-100">Inscrever-se</button>
 						</form>
-						<div class="d-flex" style="font-size: 30px">
-							<i class="text-secondary-emphasis bi bi-instagram"></i>
-							<i class="text-secondary-emphasis bi bi-facebook ms-2"></i>
-							<i class="text-secondary-emphasis bi bi-snapchat ms-2"></i>
-							<i class="text-secondary-emphasis bi bi-twitter ms-2"></i>
-						</div>
 					</div>
 				</div>
 			</section>
