--- a/biografia.html
+++ b/biografia.html
@@ -79,7 +79,204 @@
 		<main class="container mt-5">
 			<section class="mt-5">
 				<h1 class="mb-3">Biografia</h1>
-				<!-- AQUI DA PRA COLOCAR ALGUNS ACCORDIONS SEPARANDO MOMENTOS DA VIDA DELA -->
+				<div class="accordion" id="accordion">
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button
+								class="accordion-button"
+								type="button"
+								data-bs-toggle="collapse"
+								data-bs-target="#collapseOne"
+								aria-expanded="true"
+								aria-controls="collapseOne"
+							>
+								Infância e Início de Carreira
+							</button>
+						</h2>
+						<div
+							id="collapseOne"
+							class="accordion-collapse collapse show"
+							data-bs-parent="#accordion"
+						>
+							<div class="accordion-body">
+								Taylor Alison Swift nasceu em 13 de dezembro de 1989 em Reading,
+								Pensilvânia, EUA. Ela cresceu em uma fazenda e desde cedo
+								mostrou interesse pela música. Aos 10 anos, começou a se
+								apresentar em festivais locais e competições de canto. Sua
+								família apoiou seu talento, e aos 14 anos, convenceram-se a
+								mudar para Nashville, Tennessee, o epicentro da música country.
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button
+								class="accordion-button collapsed"
+								type="button"
+								data-bs-toggle="collapse"
+								data-bs-target="#collapseTwo"
+								aria-expanded="false"
+								aria-controls="collapseTwo"
+							>
+								Primeiro Álbum e Sucesso na Música Country
+							</button>
+						</h2>
+						<div
+							id="collapseTwo"
+							class="accordion-collapse collapse"
+							data-bs-parent="#accordion"
+						>
+							<div class="accordion-body">
+								Taylor lançou seu álbum de estreia homônimo, "Taylor Swift", em
+								2006. O álbum incluiu hits como "Tim McGraw" e "Teardrops on My
+								Guitar". Ela rapidamente se tornou uma sensação da música
+								country, ganhando prêmios e elogios por seu talento como cantora
+								e compositora.
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button
+								class="accordion-button collapsed"
+								type="button"
+								data-bs-toggle="collapse"
+								data-bs-target="#collapseThree"
+								aria-expanded="false"
+								aria-controls="collapseThree"
+							>
+								Transição para o Pop e Sucesso Global
+							</button>
+						</h2>
+						<div
+							id="collapseThree"
+							class="accordion-collapse collapse"
+							data-bs-parent="#accordion"
+						>
+							<div class="accordion-body">
+								Em 2014, Taylor lançou o álbum "1989", marcando uma mudança de
+								gênero para o pop. O álbum foi um enorme sucesso e incluiu
+								faixas como "Shake It Off" e "Blank Space". Ela se tornou uma
+								estrela internacional e consolidou sua posição como uma das
+								artistas mais influentes da música pop.
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button
+								class="accordion-button collapsed"
+								type="button"
+								data-bs-toggle="collapse"
+								data-bs-target="#collapseFour"
+								aria-expanded="false"
+								aria-controls="collapseFour"
+							>
+								Ativismo e Empreendedorismo
+							</button>
+						</h2>
+						<div
+							id="collapseFour"
+							class="accordion-collapse collapse"
+							data-bs-parent="#accordion"
+						>
+							<div class="accordion-body">
+								Taylor Swift também se destacou como uma voz influente na defesa
+								dos direitos dos artistas e causas sociais. Ela usou sua
+								plataforma para apoiar questões como igualdade de gênero,
+								educação e direitos LGBTQ+. Além disso, lançou com sucesso sua
+								linha de perfumes e se envolveu em várias campanhas
+								publicitárias.
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button
+								class="accordion-button collapsed"
+								type="button"
+								data-bs-toggle="collapse"
+								data-bs-target="#collapseFive"
+								aria-expanded="false"
+								aria-controls="collapseFive"
+							>
+								Álbuns de Sucesso Contínuo
+							</button>
+						</h2>
+						<div
+							id="collapseFive"
+							class="accordion-collapse collapse"
+							data-bs-parent="#accordion"
+						>
+							<div class="accordion-body">
+								Taylor continuou a lançar álbuns de sucesso, incluindo
+								"Reputation" (2017) e "Lover" (2019). Suas músicas abordam temas
+								pessoais e relacionamentos, ganhando fãs leais ao redor do
+								mundo. Ela também lançou "Folklore" e "Evermore" em 2020,
+								marcando um retorno à sua música mais acústica e melancólica.
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button
+								class="accordion-button collapsed"
+								type="button"
+								data-bs-toggle="collapse"
+								data-bs-target="#collapseSix"
+								aria-expanded="false"
+								aria-controls="collapseSix"
+							>
+								Regravação de Álbuns Anteriores
+							</button>
+						</h2>
+						<div
+							id="collapseSix"
+							class="accordion-collapse collapse"
+							data-bs-parent="#accordion"
+						>
+							<div class="accordion-body">
+								Um marco importante em sua carreira recente foi o projeto de
+								regravação de seus primeiros álbuns, que foram vendidos sem sua
+								autorização. Isso permitiu que Taylor retomasse o controle de
+								sua música e os lançasse sob sua própria gravadora.
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h2 class="accordion-header">
+							<button
+								class="accordion-button collapsed"
+								type="button"
+								data-bs-toggle="collapse"
+								data-bs-target="#collapseSeven"
+								aria-expanded="false"
+								aria-controls="collapseSeven"
+							>
+								Legado Duradouro
+							</button>
+						</h2>
+						<div
+							id="collapseSeven"
+							class="accordion-collapse collapse"
+							data-bs-parent="#accordion"
+						>
+							<div class="accordion-body">
+								Taylor Swift é uma das artistas mais premiadas da história, com
+								inúmeros Grammys e outros prêmios. Seu impacto na música, na
+								cultura pop e na indústria do entretenimento é inegável. Ela é
+								conhecida por sua habilidade como compositora e sua capacidade
+								de se reinventar ao longo dos anos.
+								<br />
+								<br />
+								Taylor Swift continua a ser uma força dominante na música e na
+								cultura pop, e sua carreira está longe de terminar. Sua história
+								é a de uma jovem que seguiu seus sonhos e se tornou uma das
+								artistas mais influentes de sua geração.
+							</div>
+						</div>
+					</div>
+				</div>
 			</section>
 		</main>
 
